# mtammenpaa

./: .gitignore  README.md  justfile  package-lock.json  package.json
client/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.json
client/public/: index.html
client/src/: App.tsx  Home.tsx  Main.tsx  color-contrast.d.ts  constants.ts  global.css  index.tsx  react-app-env.d.ts
notes/: 0123.md  0124.md  0126.md  0129.md
posts/: Best.md  README.md  Test.md  build.sqlite  buildignore  check_diff  create_diff_table  customMdToHtml.lua  justfile
posts/2025-df-cad/: content.md  fusilli.glb  meta.json  preview.html  preview.json
posts/2025-df-cutting/: content.md  meta.json  preview.html
posts/2025-df-eda/: content.md  meta.json  preview.html
posts/2025-df-embedded/: content.md  meta.json  preview.html
posts/2025-df-kickoff/: content.html  content.md  meta.json  (+2 more)
public/: index.html
server/: Cargo.toml  askama.toml  bun.lockb  db.sqlite  index.js  index.ts  justfile  package.json
server/blog/lorem/: post.html
server/client/: code.css  color.css  dependencies  global.css  index.html  justfile  layout.css  three.js  typography.css
server/migrations/: 0001_initial_table.sql  0002_showcase_table.sql
server/public/: index.html
server/public/assets/: index-0325313f.css  index-2d311956.js
server/scripts/: initDb.ts  upsertPost.ts
server/src/: db.rs  error.rs  main.rs  routes.rs  types.rs  util.rs
server/templates/: main.html  nav.html  page.html  post.html  preview.html  previewList.html  showcase.html
src/: App.tsx  index.js
(+85 files in other folders)
