[package]
name = "mtammenpaa-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
derive_more = "0.99.17"
dotenv = "0.15.0"
listenfd = "1.0.1"
minijinja = { version = "2.6.0", features = ["loader", "multi_template"] }
palette = "0.7.6"
rand = "0.8.5"
serde = { version = "1.0.156", features = ["derive", "std"] }
serde_json = "1.0.94"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
