[package]
name = "mtammenpaa-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
dotenv = "0.15.0"
listenfd = "1.0.2"
mime = "0.3.17"
minijinja = { version = "2.6.0", features = ["loader", "multi_template"] }
palette = "0.7.6"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive", "std"] }
serde_json = "1.0.137"
url = { version = "2.2.2", default-features = false }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
